--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Kareem</h1>
 						   					<h2>A Machine Learning and Robotics Engineer</h2>
-												<p><a href="google.com" target="_blank" class="btn btn-primary btn-learn">Download CV<i class="icon-download4"></i></a></p>
+												<p><a href="https://drive.google.com/file/d/1wyItcENsnMCgyb9DrBNMLOGhJNSwg3v5/view?usp=share_link" target="_blank" class="btn btn-primary btn-learn">Download CV<i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
