--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/Kareem_Elsawah_Image.png);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Kareem Elsawah</a></h1>
-				<span class="position"><a href="#">ML and Robotics Engineer</a></span>
+				<span class="position" style="color:black;">ML and Robotics Engineer</span>
+				<ul id="socials">
+					<li id="socials"><a href="https://github.com/kareemalsawah" target="_blank" class="icon-github"></i></a></li>
+					<li id="socials"><a href="https://www.linkedin.com/in/kareem-elsawah/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+				</ul>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -77,10 +81,6 @@
 			<div class="colorlib-footer">
 				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright <script>document.write(new Date().getFullYear());</script> All rights reserved.
-				<ul>
-					<li><a href="#"><i class="icon-github"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-				</ul>
 			</div>
 
 		</aside>
@@ -89,16 +89,17 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 			<section id="colorlib-hero" class="js-fullheight" data-section="home">
 				<div class="flexslider js-fullheight">
 					<ul class="slides">
-				   	<li style="background-image: url(images/arm.jpg);">
+				   	<li style="background-image: url(images/background_me.png);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner js-fullheight">
-					   					<div class="desc">
-						   					<h1>Hi! <br>I'm Kareem</h1>
-						   					<h2>A Machine Learning and Robotics Engineer</h2>
-												<p><a href="https://drive.google.com/file/d/1wyItcENsnMCgyb9DrBNMLOGhJNSwg3v5/view?usp=share_link" target="_blank" class="btn btn-primary btn-learn">Download CV<i class="icon-download4"></i></a></p>
+					   					<div class="desc" style="padding:20px;">
+											<div id="background_black"></div>
+						   					<h1 style="color:white;">Hi! <br>I'm Kareem</h1>
+						   					<h2 style="color:white;">A Machine Learning and Robotics Engineer</h2>
+												<p><a style="color:white; border-color:white;" href="KareemElsawahCV.pdf" target="_blank" class="btn btn-primary btn-learn">Download CV<i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -116,9 +117,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
 									<div class="about-desc">
-										<span class="heading-meta">About Us</span>
+										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Kareem Elsawah</strong>, a computer engineering undergradute student at Ain Shams University, Faculty of Engineering with a passion towards Machine Learning and Robotics. My recent interests have been generative models and Autonomous Mobile Robotics. I am currently working on my final year project: Swarm of Autonomous Drones for Environment Mapping.</p>
+										<p><strong>I'm Kareem Elsawah</strong>, a computer engineering undergradute student at Ain Shams University, Faculty of Engineering with a passion towards Machine Learning and Robotics. My recent interests have been generative models and Autonomous Mobile Robotics. I am currently working on my final year project: Swarm of Autonomous Drones for Environment Mapping.</p>
 									</div>
 								</div>
 							</div>
@@ -135,16 +136,16 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<h3>Robotics</h3>
 									</div>
 								</div>
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
-									<div class="services color-4">
-										<span class="icon2"><i class="icon-phone3"></i></span>
-										<h3>Game Development</h3>
-									</div>
-								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
 									<div class="services color-3">
 										<span class="icon2"><i class="icon-data"></i></span>
 										<h3>Software</h3>
+									</div>
+								</div>
+								<div class="col-md-3 animate-box" data-animate-effect="fadeInBottom">
+									<div class="services color-4">
+										<span class="icon2"><i class="icon-phone3"></i></span>
+										<h3 style="font-size:15px;">Game Development</h3>
 									</div>
 								</div>
 							</div>
@@ -189,28 +190,6 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>Game Development (Unreal Engine)</h3>
-								<div class="progress">
-								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="65"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
-								    <span>65%</span>
-								  	</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="progress-wrap">
-								<h3>Generative Modeling</h3>
-								<div class="progress">
-								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-								    <span>70%</span>
-								  	</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="progress-wrap">
 								<h3>Statistics</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="85"
@@ -222,11 +201,33 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
+								<h3>Generative Modeling</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
+								    <span>75%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="progress-wrap">
 								<h3>Reinforcement Learning</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
 								    <span>75%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="progress-wrap">
+								<h3>Game Development (Unreal Engine)</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="65"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
+								    <span>70%</span>
 								  	</div>
 								</div>
 							</div>
@@ -599,18 +600,18 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						<div class="col-md-7 col-md-push-1">
 							<div class="row">
 								<div class="col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
-									<form action="">
+									<form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeVV-FDlFHEmLRCklJ_1QoOmYMyAn7a6bvjMb43UcCloKMEwQ/formResponse" method="POST">
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Name">
+											<input type="text" class="form-control" placeholder="Name" name="entry.347280122">
 										</div>
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Email">
+											<input type="text" class="form-control" placeholder="Email" name="entry.1226565609">
 										</div>
 										<div class="form-group">
-											<input type="text" class="form-control" placeholder="Subject">
+											<input type="text" class="form-control" placeholder="Subject" name="entry.514970721">
 										</div>
 										<div class="form-group">
-											<textarea name="" id="message" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+											<textarea id="message" cols="30" rows="7" class="form-control" placeholder="Message" name="entry.2074491069"></textarea>
 										</div>
 										<div class="form-group">
 											<input type="submit" class="btn btn-primary btn-send-message" value="Send Message">
