--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 				<ul id="socials">
 					<li id="socials"><a href="https://github.com/kareemalsawah" target="_blank" class="icon-github"></i></a></li>
 					<li id="socials"><a href="https://www.linkedin.com/in/kareem-elsawah/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+					<li id="socials"><a href="mailto:alsawahkareem@gmail.com" target="_blank"><i class="icon-mail" style="font-size:20px;"></i></a></li>
 				</ul>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
