Added the Why library

--- a/index.html
+++ b/index.html
@@ -451,15 +451,24 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/bros.png);">
+						
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(images/why.png);">
 								<div class="desc">
 									<div class="con">
-										<h3>BROS</h3>
-										<span>Bandwidth Reduction for Online Streaming. A tool to reduce the required bandwidth for streaming lectures by removing the lecturer (while showing where he/she is pointing) and discretizing the shown board.</span>
+										<h3>Why</h3>
+										<span>”Why”, a causal inference library for structural causal modeling and identification. ”Why” implements a variety of algorithms, including: 
+											<ul>
+												<li>the pc algorithm for causal discovery</li>
+												<li>GNN and CGNN for edge orientation</li>
+												<li>COM, GCOM, and TARNet estimators</li>
+												<li>Backdoor adjustment</li>
+												<li>Bounds and Sensitivity analysis</li>
+											</ul>
+										</span>
 										<p class="icon">
-											<span><a href="https://github.com/Ali-Elganzory/High-Ping" target="_blank"><i class="icon-github"></i></a></span>
-											<span><a href="https://drive.google.com/file/d/19PL7v864DR6zMe8YZwuvf0tsw9yDUB_Y/view" target="_blank"><i class="icon-file"></i></a></span>
+											<span><a href="https://github.com/MRSAIL-Mini-Robotics-Software-AI-Lab/Why/" target="_blank"><i class="icon-github"></i></a></span>
+											<span><a href="https://github.com/MRSAIL-Mini-Robotics-Software-AI-Lab/Why/blob/main/Documentation%2C%20the%20Why%20library.pdf" target="_blank"><i class="icon-file"></i></a></span>
 										</p>
 									</div>
 								</div>
@@ -473,6 +482,21 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 										<span>Software for autonomously driving a race car according to the Formula Student AI Rules.</span>
 										<p class="icon">
 											<span><a href="https://www.researchgate.net/publication/353314517_Autonomous_Driving_Software_for_FS-AI_2021" target="_blank"><i class="icon-file"></i></a></span>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
+							<div class="project" style="background-image: url(images/bros.png);">
+								<div class="desc">
+									<div class="con">
+										<h3>BROS</h3>
+										<span>Bandwidth Reduction for Online Streaming. A tool to reduce the required bandwidth for streaming lectures by removing the lecturer (while showing where he/she is pointing) and discretizing the shown board.</span>
+										<p class="icon">
+											<span><a href="https://github.com/Ali-Elganzory/High-Ping" target="_blank"><i class="icon-github"></i></a></span>
+											<span><a href="https://drive.google.com/file/d/19PL7v864DR6zMe8YZwuvf0tsw9yDUB_Y/view" target="_blank"><i class="icon-file"></i></a></span>
 										</p>
 									</div>
 								</div>
