--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingOne">
 									        <h4 class="panel-title">
-									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Bachelor of Engineering, Ain Shams University
+									            <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Msc in Applied Computing, University of Toronto
 									            </a>
 									        </h4>
 									    </div>
@@ -260,15 +260,30 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									         <div class="panel-body">
 									            <div class="row">
 										      		<div class="col-md-12">
-										      			<p> Expected July 2023 <br>
-															Cummulative GPA: 3.89/4.0 <br>
-															Major in Computer Engineering and Software Systems <br>
-															Minor in Data Science <br>
-															Thesis: Swarm of Autonomous Drones for Environment Mapping
+										      			<p> Expected: December 2024 <br>
+															Ongoing courses: ML in healthcare, Vision for Robotics
 														</p>
 										      		</div>
 										      	</div>
 									         </div>
+									    </div>
+									</div>
+									<div class="panel panel-default">
+									    <div class="panel-heading" role="tab" id="headingFour">
+									        <h4 class="panel-title">
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Bachelor of Engineering, Ain Shams University
+									            </a>
+									        </h4>
+									    </div>
+									    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+									        <div class="panel-body">
+									            <p> July 2023 <br>
+													Cummulative GPA: 3.89/4.0 <br>
+													Major in Computer Engineering and Software Systems <br>
+													Minor in Data Science <br>
+													Thesis: Swarm of Autonomous Drones for Environment Mapping
+												</p>	
+									        </div>
 									    </div>
 									</div>
 
@@ -331,7 +346,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									 </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">ASU Racing Team, AI Team Leader</a> <span>Nov 2019 - Now</span></h2>
+					                  <h2><a href="#">ASU Racing Team, AI Team Leader</a> <span>Nov 2019 - August 2023</span></h2>
 					                  <ul>
 										<li>Led the 2021 Formula AI and Shell AI teams where we won severals awards such as Global first place for pitch the future competition and Global fifth place for the autonomous programming competition</li>
 										<li>Worked on various perception, control, and SLAM algorithms for the autonomous racing vehicle</li>
