--- a/index.html
+++ b/index.html
@@ -261,7 +261,9 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									            <div class="row">
 										      		<div class="col-md-12">
 										      			<p> Expected: December 2024 <br>
-															Ongoing courses: ML in healthcare, Vision for Robotics
+															Completed courses: ML in healthcare, Vision for Robotics
+															<br>
+															Ongoing courses: Algorithmic Fairness, Statistical learning Theory
 														</p>
 										      		</div>
 										      	</div>
@@ -281,7 +283,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 													Cummulative GPA: 3.89/4.0 <br>
 													Major in Computer Engineering and Software Systems <br>
 													Minor in Data Science <br>
-													Thesis: Swarm of Autonomous Drones for Environment Mapping
+													Thesis: Autonomous Drones for Environment Mapping in GPS-denied Environments
 												</p>	
 									        </div>
 									    </div>
@@ -441,6 +443,21 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="project" style="background-image: url(images/sdes.png); background-size:auto 100%;">
+								<div class="desc">
+									<div class="con">
+										<h3>Scalable Latent Neural SDEs</h3>
+										<span>A novel method that improves neural stochastic differential equations in terms of
+											scalability compared to previous methods, specifically for the latent SDE model.</span>
+										<p class="icon">
+											<span><a href="https://github.com/CordellBlanchard/ScalableLatentSDE" target="_blank"><i class="icon-github"></i></a></span>
+											<span><a href="https://github.com/CordellBlanchard/ScalableLatentSDE/blob/main/Project_Report.pdf" target="_blank"><i class="icon-file"></i></a></span>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="project" style="background-image: url(images/ganvas.gif);">
 								<div class="desc">
 									<div class="con">
@@ -468,7 +485,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 						</div>
 						
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/why.png);">
+							<div class="project" style="background-image: url(images/why.png); background-size: 100% auto;">
 								<div class="desc">
 									<div class="con">
 										<h3>Why</h3>
@@ -624,7 +641,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="mailto:alsawahkareem@gmail.com">alsawahkareem@gmail.com</a></p>
+									<p><a href="mailto:alsawahkareem@gmail.com">kareem.elsawah@mail.utoronto.ca</a></p>
 								</div>
 							</div>
 
@@ -633,7 +650,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="tel://+201153599277">+20 115 359 9277</a></p>
+									<p><a href="tel://+16476806639">+1 647 680 6639</a></p>
 								</div>
 							</div>
 						</div>
