--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>I'm Kareem Elsawah</strong>, a computer engineering undergradute student at Ain Shams University, Faculty of Engineering with a passion towards Machine Learning and Robotics. My recent interests have been generative models and Autonomous Mobile Robotics. I am currently working on my final year project: Swarm of Autonomous Drones for Environment Mapping.</p>
+										<p><strong>I'm Kareem Elsawah</strong>, a Master's student (MScAC) at the University of Toronto, with a passion towards Machine Learning and Robotics. My recent interests have been generative models and Autonomous Mobile Robotics. I am also currently interested in exploring deep connections between the various machine learning algorithms currently used and the different perspectives and formulations they can be presented in.<p>
 									</div>
 								</div>
 							</div>
@@ -281,6 +281,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									        <div class="panel-body">
 									            <p> July 2023 <br>
 													Cummulative GPA: 3.89/4.0 <br>
+													Ranked 1st out of 130 students <br>
 													Major in Computer Engineering and Software Systems <br>
 													Minor in Data Science <br>
 													Thesis: Autonomous Drones for Environment Mapping in GPS-denied Environments
