--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<ul id="socials">
 					<li id="socials"><a href="https://github.com/kareemalsawah" target="_blank" class="icon-github"></i></a></li>
 					<li id="socials"><a href="https://www.linkedin.com/in/kareem-elsawah/" target="_blank"><i class="icon-linkedin2"></i></a></li>
-					<li id="socials"><a href="mailto:kareem.elsawah@mail.utoronto.ca" target="_blank"><i class="icon-mail" style="font-size:20px;"></i></a></li>
+					<li id="socials"><a href="mailto:alsawahkareem@gmail.com" target="_blank"><i class="icon-mail" style="font-size:20px;"></i></a></li>
 				</ul>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
@@ -341,6 +341,24 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					<div class="row">
 						<div class="col-md-12">
 				         <div class="timeline-centered">
+							<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+									<div class="timeline-icon color-3" style="background-color:white;">
+										<img src="images/ocado_tech.jpg" alt="Ocado Technology icon" style="width:100%;height:100%;">
+									 </div>
+
+					               <div class="timeline-label">
+					                  <h2><a href="#">Ocado Technology, Robotics Software Intern</a> <span>May 2024 - Dec 2024</span></h2>
+					                  <ul>
+										<li>Developed a survival analysis model for item drop prediction using robotics data (e.g., joint states, suction pressures).</li>
+										<li>Designed and implemented a predictive control system fusing survival analysis, CLIP, and Model Predictive Control to increase robotic arm speed in warehouses while reducing item drop rates.</li>
+										<li>Achieved up to 50% reduction in drop rates in simulation without reducing speed; real-world validation showed a statistically significant reduction in applied forces, enhancing operational efficiency.</li>
+									  </ul>
+					               </div>
+					            </div>
+					         </article>
+
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 
@@ -349,17 +367,22 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									 </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">ASU Racing Team, AI Team Leader</a> <span>Nov 2019 - August 2023</span></h2>
+					                  <h2><a href="#">ASU Racing Team, AI Team Leader</a> <span>Nov 2019 - Aug 2023</span></h2>
 					                  <ul>
-										<li>Led the 2021 Formula AI and Shell AI teams where we won severals awards such as Global first place for pitch the future competition and Global fifth place for the autonomous programming competition</li>
-										<li>Worked on various perception, control, and SLAM algorithms for the autonomous racing vehicle</li>
+										<li>Led Formula AI and Shell AI teams for the 2021 and 2022 seasons, winning several international awards. The 2021 system is described in this <a target="_blank" href="https://www.researchgate.net/publication/353314517_Autonomous_Driving_Software_for_FS-AI_2021">research gate article</a>.</li>
+										<li>Completed a full-autonomous lap using a real-life previously unseen vehicle in the Formula Student UK competition using less than a total of 6 hours for testing.</li>
+										<li>Developed a LiDAR-based cone detection pipeline achieving sub-centimeter accuracy at more than 100 fps.</li>
+										<li>Created heuristic and transformer-based planners achieving robustness to extremely noisy perception.</li>
+										<li>Implemented Graph-SLAM using LiDAR-based Odometry to create a map of cones in real-time.</li>
+										<li>Implemented Model Predictive Control for obtaining, updating, and following the optimal racing line.</li>
+										<li>Held a summer AI & Robotics workshop with over 200 applicants filtered to over 50 participants.</li>
 									  </ul>
 					               </div>
 					            </div>
 					         </article>
 
 
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 									<div class="timeline-icon color-3" style="background-color:white;">
 										<img src="images/microsoft.jpeg" alt="Microsoft icon" style="width:100%;height:100%;">
@@ -367,10 +390,10 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					               <div class="timeline-label">
 					               	<h2><a href="#">Intern at Microsoft, Advanced Technology Lab</a> <span>Jul 2022 - Oct 2022</span></h2>
 					                  <ul> 
-										<li>Worked on low-resource machine translation and speech recognition</li>
-										<li> Used language models to implement basic rescoring algorithms</li>
-										<li> Improved the baseline by rescoring during training rather than inference (language model prior)</li>
-										<li> Started work on transfer learning between languages in the embedding space using contrastive learning approaches</li>
+										<li>Worked on low-resource machine translation and speech recognition.</li>
+										<li>Used language models to implement basic rescoring algorithms.</li>
+										<li>Improved the baseline by rescoring during training rather than inference (language model prior).</li>
+										<li>Started work on transfer learning between languages in the embedding space using contrastive learning approaches.</li>
 									  </ul>
 					               </div>
 					            </div>
@@ -384,17 +407,17 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 					               <div class="timeline-label">
 					               	<h2><a href="#">Perception Intern, Autotronics Research Lab</a> <span>Jan 2021 - Sep 2021</span></h2>
 					                  <ul>
-										<li>Worked on the perception system for a self-driving car, especially object detection and tracking</li>
-										<li>Used LiDAR and RGB Cameras to detect objects in 3D using PVCNN</li>
-										<li>Tracked objects in 2D and 3D using SORT, DeepSORT, and similar 3D variants</li>
+										<li>Worked on the perception system for a self-driving car, especially object detection and tracking.</li>
+										<li>Used LiDAR and RGB Cameras to detect objects in 3D using PVCNN.</li>
+										<li>Tracked objects in 2D and 3D using SORT, DeepSORT, and similar 3D variants.</li>
 										<li>Created a visualizer in Unreal Engine to view all of the cars' perceptions (surrounding cars, lanes, traffic lights, path planning, pedestrians, etc.)</li>
-										<li>Taught five sessions on SLAM and perception in a summer workshop</li>
+										<li>Taught five sessions on SLAM and perception in a summer workshop.</li>
 									  </ul>
 					               </div>
 					            </div>
 					         </article>
 
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInTop">
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 									<div class="timeline-icon color-3" style="background-color:white;">
 										<img src="images/omdena.jpeg" alt="Omdena icon" style="width:100%;height:100%;">
@@ -642,7 +665,7 @@ Copyright <script>document.write(new Date().getFullYear());</script> All rights 
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="colorlib-text">
-									<p><a href="mailto:alsawahkareem@gmail.com">kareem.elsawah@mail.utoronto.ca</a></p>
+									<p><a href="mailto:alsawahkareem@gmail.com">alsawahkareem@gmail.com</a></p>
 								</div>
 							</div>
 
